--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-federated-deployer
           role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
 
@@ -67,7 +67,7 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::246386308913:role/eks-federated-deployer
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-federated-deployer
           role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
 
@@ -105,8 +105,11 @@ jobs:
           export IMAGE_TAG=${{ github.event.inputs.image }}  
           envsubst < k8s/deployment.yaml | tee k8s/deployment-resolved.yaml
 
-      - name: Deploy to EKS
+      - name: Deploy Deployment
         run: kubectl apply --validate=false -f k8s/deployment-resolved.yaml
+
+      - name: Deploy Service
+        run: kubectl apply -f service.yaml
 
       - name: Check Installation
         run: |
