--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -8,11 +8,14 @@ spec:
   selector:
     app: marco-nico-app
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
-    - protocol: TCP
+      nodePort: 30080  # Choose a port in the range 30000-32767
+    - name: https
+      protocol: TCP
       port: 443
       targetPort: 443
-      nodePort: 30080  # Choose a port in the range 30000-32767
+      nodePort: 30443  # Choose a port in the range 30000-32767
   type: NodePort
