--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: marco-nico
-  #namespace: don't use it here, only at deploy time
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -19,3 +19,10 @@ spec:
           ports:
             - containerPort: 80
             - containerPort: 443
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
