Document te EKS Cluster creation process

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,6 +111,9 @@ jobs:
       - name: Deploy Service
         run: kubectl apply --validate=false -f k8s/service.yaml
 
+      - name: Deploy Service
+        run: kubectl apply --validate=false -f k8s/fargate-test-pod-deployment.yaml
+
       - name: Check Installation
         run: |
           kubectl get pods -l app=marco-nico-app
