--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -20,6 +20,9 @@ jobs:
           role-session-name: eks-deployer-testing
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Debug Caller Identity
+        run: aws sts get-caller-identity
+
       - name: Create kube-config directory
         run: mkdir -p $HOME/.kube
 
