--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,12 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-deployer
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-federated-deployer
           role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Debug Caller Identity
+        run: aws sts get-caller-identity
 
       - name: Create ECR Repository if it doesn't exist
         run: |
@@ -67,7 +70,7 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-deployer
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-federated-deployer
           role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
 
@@ -113,9 +116,3 @@ jobs:
         run: |
           kubectl get pods -l app=marco-nico-app
           kubectl describe deployment marco-nico
-
-#      - name: Check Pod Status
-#        run: |
-#          echo "Waiting for pods to be in running state..."
-#          kubectl get pods -l app=marco-nico-app
-#          kubectl wait --for=condition=Ready pod -l app=marco-nico-app --timeout=120s
