--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     permissions:
       id-token: write  # allows creation of an OIDC token
+      contents: read
     runs-on: ubuntu-latest
 
     steps:
