--- a/.github/workflows/stop-all-pods.yml
+++ b/.github/workflows/stop-all-pods.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write  # allows creation of an OIDC token
+      contents: read
 
     steps:
       - name: Checkout code
