Testing new way to login in github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - none
 
 jobs:
   build:
@@ -23,20 +23,6 @@ jobs:
           role-session-name: federated-role-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
           mask-aws-account-id: true
-
-      - name: Debug Caller Identity
-        run: aws sts get-caller-identity
-
-      - name: Assume actual deployer role
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-deployer
-          role-session-name: eks-deployer-temporal-session
-          role-chaining: true
-
-      - name: Debug Caller Identity
-        run: aws sts get-caller-identity
 
       - name: Create ECR Repository if it doesn't exist
         run: |
@@ -87,9 +73,6 @@ jobs:
           role-session-name: eks-deployer-temporal-session
           aws-region: ${{ secrets.AWS_REGION }}
           mask-aws-account-id: true
-
-      - name: Create kube-config directory
-        run: mkdir -p $HOME/.kube
 
       - name: Decode and set kubeconfig
         run: |
