--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/new-eks-deployer
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/eks-federated-deployer
           role-session-name: eks-deployer-testing
           aws-region: ${{ secrets.AWS_REGION }}
           mask-aws-account-id: true
