fix eks cluster name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Generate kubeconfig for EKS
         env:
-          CLUSTER_NAME: my-eks-cluster # Replace with your EKS cluster name
+          CLUSTER_NAME: my-cluster # Replace with your EKS cluster name
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
           aws eks update-kubeconfig --name $CLUSTER_NAME --region $AWS_REGION --kubeconfig ./kubeconfig
