--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
     outputs:
       image: ${{ steps.image-details.outputs.image }}
 
-  deploy:
+  aws_deploy:
     needs: build
     permissions:
       id-token: write  # allows creation of an OIDC token
@@ -102,13 +102,13 @@ jobs:
           export AWS_REGION=${{ secrets.AWS_REGION }}
           export ECR_REPOSITORY=${{ secrets.ECR_REPOSITORY }}
           export IMAGE_TAG=latest
-          envsubst < infrastructure/k8s/deployment.yaml | tee infrastructure/k8s/deployment-resolved.yaml
+          envsubst < k8s/deployment.yaml | tee k8s/deployment-resolved.yaml
 
       - name: Deploy Deployment
-        run: kubectl apply --validate=false -f infrastructure/k8s/deployment-resolved.yaml
+        run: kubectl apply --validate=false -f k8s/deployment-resolved.yaml
 
       - name: Deploy Service
-        run: kubectl apply --validate=false -f infrastructure/k8s/service.yaml
+        run: kubectl apply --validate=false -f k8s/service.yaml
 
       - name: Check Installation
         run: |
